--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -4,25 +4,68 @@
         <a class="navbar-brand me-7" href="#"><img src="/assets/images/logo.png" alt="logo" class="header-logo"></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav w-100 d-flex align-items-center">
-            <li class="nav-item dropdown position-static">
-               <a class="nav-link dropdown-toggle text-gray-80 me-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <li class="nav-item dropdown position-static border-0">
+               <a class="nav-link dropdown-toggle me-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 探索
                </a>
-               <ul class="dropdown-menu px-3" aria-labelledby="navbarDropdown">
-                  <li>
-                    <p style="padding-bottom: 4px;">探索全部</p>
-                    <ul class="list-unstyled">
-                      <li><a class="dropdown-item" href="#">音樂</a></li>
-                      <li><a class="dropdown-item" href="#">音樂</a></li>
-                      <li><a class="dropdown-item" href="#">音樂</a></li>
-                      <li><a class="dropdown-item" href="#">音樂</a></li>
-                      <li><a class="dropdown-item" href="#">音樂</a></li>
-                    </ul>
-                  </li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-               </ul>
+               <div class="dropdown-menu dropdown-w py-0 show border-0" aria-labelledby="navbarDropdown">
+                <div class="d-flex">
+                  <ul class="list-unstyled dropdown-list-1 bg-gray-40 px-3 rounded-start border-end">
+                    <li class="dropdown-item-title">探索全部</li>
+                    <li><a class="dropdown-item" href="#">音樂</a></li>
+                    <li><a class="dropdown-item" href="#">音樂</a></li>
+                    <li><a class="dropdown-item" href="#">音樂</a></li>
+                    <li><a class="dropdown-item" href="#">音樂</a></li>
+                  </ul>
+
+                  <ul class="list-unstyled dropdown-list-2 border-end">
+                    <li class="dropdown-item-title">所有程式</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                  </ul>
+
+                  <ul class="list-unstyled dropdown-list-3">
+                    <li class="dropdown-item-title">熱門網頁前端課程</a></li>
+                    <li><a class="" href="#">
+                      <div class="">
+                        <div class="d-flex pb-5 border-bottom">
+                          <div class="ca">
+                            <img src="/assets/images/course-5.png" class=" rounded-start" alt="...">
+                          </div>
+                          <div class="">
+                            <div class="card-body py-0 pe-0">
+                              <p class="card-title fw-semibold text-black pb-3">小白也會！從零開始學習 Python 程式設計</p>
+                              <div class="d-flex justify-content-between pb-1 border-bottom">
+                                <div class="d-flex align-items-center">
+                                  <img src="/assets/images/avatar-2.png" alt="avatar" class="pe-1">
+                                  <p>Kelly Hsu</p>
+                                </div>
+                                <div class="text-end">
+                                  <p class="text-primary-100 fw-semibold">NT$ 2,480</p>
+                                  <p class="fs-8 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
+                                </div>
+                              </div>
+                              <div class="d-flex py-1 w-100">
+                                <p>已有 420 位同學加入</p>
+                                <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                                  star
+                                  </span>
+                                  <p class="text-black">4.0<span class="text-gray-70">(333)</span></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                  </ul>
+                </div>
+               </div>
+              </li>
             </li>
             <li class="nav-item">                    
                 <form class="position-relative">
