--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -4,7 +4,7 @@
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
 @import "../../node_modules/bootstrap";
-@import './utils/utilities';
+@import './utils/utilities.scss';
 @import './utils/mixins.scss';
 
 @import './base/base';
