--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -8,9 +8,9 @@
                <a class="nav-link dropdown-toggle me-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 探索
                </a>
-               <div class="dropdown-menu dropdown-w py-0 show border-0" aria-labelledby="navbarDropdown">
+               <div class="dropdown-menu dropdown-w py-0 border-0" aria-labelledby="navbarDropdown">
                 <div class="d-flex">
-                  <ul class="list-unstyled dropdown-list-1 bg-gray-40 px-3 rounded-start border-end">
+                  <ul class="list-unstyled dropdown-list-1 bg-light px-3 rounded-start border-end">
                     <li class="dropdown-item-title">探索全部</li>
                     <li><a class="dropdown-item" href="#">音樂</a></li>
                     <li><a class="dropdown-item" href="#">音樂</a></li>
@@ -27,41 +27,109 @@
                   </ul>
 
                   <ul class="list-unstyled dropdown-list-3">
-                    <li class="dropdown-item-title">熱門網頁前端課程</a></li>
-                    <li><a class="" href="#">
-                      <div class="">
-                        <div class="d-flex pb-5 border-bottom">
-                          <div class="ca">
-                            <img src="/assets/images/course-5.png" class=" rounded-start" alt="...">
+                    <li class="fw-semibold pb-3">熱門網頁前端課程</a></li>
+                    <li><a href="#">
+                      <div class="border-top pt-3">
+                        <div class="d-flex pb-5">
+                          <div class="position-relative me-1">
+                            <img src="/assets/images/course-5.png" class="object-fit-cover rounded w-100" alt="course" style="width: 100px; height: 100px;">
+                            <span class="position-absolute top-0 start-0 badge rounded-pill bg-alers-10 text-alers-100 mt-12 ms-12">
+                              8 折
+                              <span class="visually-hidden">unread messages</span>
+                            </span>
                           </div>
-                          <div class="">
-                            <div class="card-body py-0 pe-0">
-                              <p class="card-title fw-semibold text-black pb-3">小白也會！從零開始學習 Python 程式設計</p>
-                              <div class="d-flex justify-content-between pb-1 border-bottom">
-                                <div class="d-flex align-items-center">
-                                  <img src="/assets/images/avatar-2.png" alt="avatar" class="pe-1">
-                                  <p>Kelly Hsu</p>
-                                </div>
-                                <div class="text-end">
-                                  <p class="text-primary-100 fw-semibold">NT$ 2,480</p>
-                                  <p class="fs-8 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
-                                </div>
+                          <section>
+                            <h6 class="text-black pb-3">小白也會！從零開始學習 Python 程式設計</h6>
+                            <div class="d-flex justify-content-between pb-1 border-bottom">
+                              <div class="d-flex align-items-center">
+                                <img src="/assets/images/avatar-2.png" alt="avatar" class="pe-1">
+                                <p>Kelly Hsu</p>
                               </div>
-                              <div class="d-flex py-1 w-100">
-                                <p>已有 420 位同學加入</p>
-                                <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
-                                  star
-                                  </span>
-                                  <p class="text-black">4.0<span class="text-gray-70">(333)</span></p>
+                              <div class="text-end">
+                                <p class="text-primary-100 fw-semibold">NT$ 2,480</p>
+                                <p class="fs-9 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
                               </div>
                             </div>
-                          </div>
+                            <div class="d-flex align-items-center py-1 w-100">
+                              <p class="fs-8">已有 420 位同學加入</p>
+                              <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                                star
+                                </span>
+                                <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
+                            </div>
+                          </section>
+
                         </div>
                       </div>
                     </a></li>
-                    <li><a class="dropdown-item" href="#">音樂1</a></li>
-                    <li><a class="dropdown-item" href="#">音樂1</a></li>
-                    <li><a class="dropdown-item" href="#">音樂1</a></li>
+                    <li><a href="#">
+                      <div class="border-top pt-3">
+                        <div class="d-flex pb-5">
+                          <div class="position-relative me-1">
+                            <img src="/assets/images/course-5.png" class="object-fit-cover rounded w-100" alt="course" style="width: 100px; height: 100px;">
+                            <span class="position-absolute top-0 start-0 badge rounded-pill bg-alers-10 text-alers-100 mt-12 ms-12">
+                              8 折
+                              <span class="visually-hidden">unread messages</span>
+                            </span>
+                          </div>
+                          <section>
+                            <h6 class="text-black pb-3">小白也會！從零開始學習 Python 程式設計</h6>
+                            <div class="d-flex justify-content-between pb-1 border-bottom">
+                              <div class="d-flex align-items-center">
+                                <img src="/assets/images/avatar-2.png" alt="avatar" class="pe-1">
+                                <p>Kelly Hsu</p>
+                              </div>
+                              <div class="text-end">
+                                <p class="text-secondary fw-semibold">已購買</p>
+                                <p class="fs-9 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
+                              </div>
+                            </div>
+                            <div class="d-flex align-items-center py-1 w-100">
+                              <p class="fs-8">已有 420 位同學加入</p>
+                              <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                                star
+                                </span>
+                                <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
+                            </div>
+                          </section>
+
+                        </div>
+                      </div>
+                    </a></li>
+                    <li><a href="#">
+                      <div class="border-top pt-3">
+                        <div class="d-flex">
+                          <div class="position-relative me-1">
+                            <img src="/assets/images/course-5.png" class="object-fit-cover rounded w-100" alt="course" style="width: 100px; height: 100px;">
+                            <span class="position-absolute top-0 start-0 badge rounded-pill bg-alers-10 text-alers-100 mt-12 ms-12">
+                              8 折
+                              <span class="visually-hidden">unread messages</span>
+                            </span>
+                          </div>
+                          <section>
+                            <h6 class="text-black pb-3">小白也會！從零開始學習 Python 程式設計</h6>
+                            <div class="d-flex justify-content-between pb-1 border-bottom">
+                              <div class="d-flex align-items-center">
+                                <img src="/assets/images/avatar-2.png" alt="avatar" class="pe-1">
+                                <p>Kelly Hsu</p>
+                              </div>
+                              <div class="text-end">
+                                <p class="text-primary-100 fw-semibold">NT$ 2,480</p>
+                                <p class="fs-9 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
+                              </div>
+                            </div>
+                            <div class="d-flex align-items-center py-1 w-100">
+                              <p class="fs-8">已有 420 位同學加入</p>
+                              <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                                star
+                                </span>
+                                <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
+                            </div>
+                          </section>
+
+                        </div>
+                      </div>
+                    </a></li>
                   </ul>
                 </div>
                </div>
@@ -72,7 +140,7 @@
                   <span class="material-symbols-outlined position-absolute start-0 top-50 translate-middle-y ms-1">
                     search
                     </span>
-                  <input class="form-control py-4 ps-7" type="search" placeholder="搜尋各種音樂、數學、程式及設計課程" aria-label="Search">
+                  <input class="form-control py-4 ps-8" type="search" placeholder="搜尋各種音樂、數學、程式及設計課程" aria-label="Search">
                   <button class="btn btn-primary-100 position-absolute end-0 top-50 translate-middle-y me-1" type="submit">搜尋</button>
                 </form>
             </li>
