--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,77 @@
-.index-title {
-  font-size: 100px;
+.btn-nav-suject{
+  :active{
+    color: #ffffff;
+    background-color: $primary-100;
+  }
+  color: $neutral-80;
+  border: $neutral-40 1px solid;
+  :hover{
+    color: #ffffff;
+  }
+}
+.img-flower{
+  position: relative;
+  background-color: $neutral-10;
+  z-index: -2;
+  &::before {
+    content:"";
+    position: absolute;
+    z-index: -1;
+    left: -48px;
+    top: 0;
+    // transform: translate(-50%, -50%);
+    background-image: url(/assets/images/deco/flower-2.png);
+    width: 560px;
+    height: 560px;
+    background-repeat: no-repeat;
+
+  }
+}
+.shadows-card{
+  box-shadow: 0px 25px 50px -12px #0000001F;
+}
+.btn{
+  &-arrow{
+    box-shadow: 0px 10px 15px -3px #0000001A;    
+    &:hover{
+      background-color: #ffffff;
+      color: $primary-100;
+      border: none;
+    }
+  }
+  &-arrow-back{
+    &::after {
+      content: "\e5c4";
+      font-family: "Material Symbols Outlined";
+    }
+  }
+  &-arrow-forward{
+    &::after {
+      content: "\e5c8";
+      font-family: "Material Symbols Outlined";
+    }
+  }
+}
+.nav-item-hover{
+  color: $neutral-80;
+  &:hover{
+    border-bottom: solid 4px $primary-100;
+    color: #0068FF;
+    font-weight: 600;
+  }
+}
+.icon-1{
+  height: 64px;
+  width: 64px;
+  background-color: #FF994F;
+  border-radius: 16px;
+  color: #fff;
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &::after {
+    content: "\e5c8";
+    font-family: "Material Symbols Outlined";
+  }
 }
