--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -453,7 +453,8 @@ $enable-button-pointers:      true !default;
 // $enable-rfs:                  true !default;
 $enable-rfs:                  false !default;
 $enable-validation-icons:     true !default;
-$enable-negative-margins:     false !default;
+// $enable-negative-margins:     false !default;
+$enable-negative-margins:     ture !default;
 $enable-deprecation-messages: true !default;
 $enable-important-utilities:  true !default;
 
@@ -500,6 +501,7 @@ $spacers: (
   9: $spacer * 3.75,
   10: $spacer * 5,
   11: $spacer * 7.5,
+  12: $spacer * .25,
 ) !default;
 // scss-docs-end spacer-variables-maps
 
@@ -724,9 +726,10 @@ $h2-font-size:                $font-size-base * 2.5 !default;
 $h3-font-size:                $font-size-base * 2 !default;
 $h4-font-size:                $font-size-base * 1.75 !default;
 $h5-font-size:                $font-size-base * 1.5 !default;
-$h6-font-size:                $font-size-base * 1.25 !default;
-$h7-font-size:                $font-size-base * .875 !default;
-$h8-font-size:                $font-size-base * .75 !default;
+$h6-font-size:                $font-size-base * 1 !default;
+$h7-font-size:                $font-size-base * 1.25 !default;
+$h8-font-size:                $font-size-base * .875 !default;
+$h9-font-size:                $font-size-base * .75 !default;
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
@@ -739,6 +742,7 @@ $font-sizes: (
   6: $h6-font-size,
   7: $h7-font-size,
   8: $h8-font-size,
+  9: $h9-font-size,
 ) !default;
 // scss-docs-end font-sizes
 
