--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -4,7 +4,7 @@
       <a class="navbar-brand me-7" href="index.html"><img src="/assets/images/logo.png" alt="logo" class="header-logo"></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav w-100 d-flex align-items-center">
-          <li class="nav-item dropdown border-0">
+          <li class="nav-item dropdown border-0 position-static">
             <a class="nav-link dropdown-toggle me-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               探索
             </a>
@@ -182,7 +182,7 @@
       <button class="navbar-toggler ms-1 border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end show d-xl-none" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas offcanvas-end d-xl-none" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <!-- <div class="offcanvas-header pb-0">
           <div class=" d-flex flex-column h-100 w-100">
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
