--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -26,14 +26,22 @@
                 
                 <ul class="list-unstyled dropdown-list-2 border-end">
                   <li class="dropdown-item-title">所有程式</a></li>
-                  <li><a class="dropdown-item" href="#">音樂1</a></li>
-                  <li><a class="dropdown-item" href="#">音樂1</a></li>
-                  <li><a class="dropdown-item" href="#">音樂1</a></li>
-                  <li><a class="dropdown-item" href="#">音樂1</a></li>
+                  <li><a class="dropdown-item" href="#">程式入門</a></li>
+                  <li><a class="dropdown-item" href="#">網頁前端</a></li>
+                  <li><a class="dropdown-item" href="#">網頁後端</a></li>
+                  <li><a class="dropdown-item" href="#">網站架設</a></li>
+                  <li><a class="dropdown-item" href="#">資訊安全</a></li>
+                  <li><a class="dropdown-item" href="#">程式語言</a></li>
+                  <li><a class="dropdown-item" href="#">遊戲開發</a></li>
+                  <li><a class="dropdown-item" href="#">資料科學</a></li>
+                  <li><a class="dropdown-item" href="#">人工智慧</a></li>
+                  <li><a class="dropdown-item" href="#">量化分析</a></li>
                 </ul>
                 
                 <ul class="list-unstyled dropdown-list-3">
-                  <li class="fw-semibold pb-3">熱門網頁前端課程</a></li>
+                  <li class="fw-semibold pb-3">
+                    <img src="/assets/images/icons/ic_fire.png" alt="fire" style="width: 24px;">
+                    熱門網頁前端課程</a></li>
                   <li><a href="#">
                     <div class="border-top pt-3">
                       <div class="d-flex pb-5">
@@ -58,7 +66,7 @@
                           </div>
                           <div class="d-flex align-items-center py-1 w-100">
                             <p class="fs-8">已有 420 位同學加入</p>
-                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto fs-7 me-12">
                               star
                             </span>
                             <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
@@ -204,29 +212,26 @@
                 </a>
               
                 <ul class="dropdown-menu position-absolute top-0 start-0 dropdown-menu-2 pt-1" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item-title" href="#">探索全部</a></li>
+                  <li><a class="dropdown-item-title" href="#">所有程式</a></li>
                   <li><a class="dropdown-item" href="#">程式入門</a></li>
-                  <li><a class="dropdown-item" href="#">程式入門</a></li>
-                  <li><a class="dropdown-item" href="#">程式入門</a></li>
+                  <li><a class="dropdown-item" href="#">網頁前端</a></li>
+                  <li><a class="dropdown-item" href="#">網頁後端</a></li>
+                  <li><a class="dropdown-item" href="#">網站架設</a></li>
+                  <li><a class="dropdown-item" href="#">資訊安全</a></li>
+                  <li><a class="dropdown-item" href="#">程式語言</a></li>
+                  <li><a class="dropdown-item" href="#">遊戲開發</a></li>
+                  <li><a class="dropdown-item" href="#">資料科學</a></li>
+                  <li><a class="dropdown-item" href="#">人工智慧</a></li>
+                  <li><a class="dropdown-item" href="#">量化分析</a></li>
                 </ul>
                </li>
-
+               <li><a class="dropdown-item" href="#">程式</a></li>
                <li><a class="dropdown-item" href="#">藝術</a></li>
                <li><a class="dropdown-item" href="#">人文</a></li>
+               <li><a class="dropdown-item" href="#">行銷</a></li>
                <li><a class="dropdown-item" href="#">投資理財</a></li>
                <li><a class="dropdown-item" href="#">心靈成長</a></li>
                <li><a class="dropdown-item" href="#">職場技能</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
-               <li><a class="dropdown-item" href="#">生活品味</a></li>
                <li><a class="dropdown-item" href="#">生活品味</a></li>
              </ul>
              <div class="bg-white py-2 px-5 position-absolute bottom-0 start-50 translate-middle-x w-100">
