--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -7,6 +7,8 @@
 @import './utils/utilities.scss';
 @import './utils/mixins.scss';
 
+@import "bootstrap/scss/utilities/api";
+
 @import './base/base';
 
 @import './layout/header.scss';
