--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -10,12 +10,15 @@
       position: absolute;
       z-index: -1;
       left: -48px;
-      top: -95px;
-      // transform: translatey(-50%);
+      top: 50%;
+      transform: translatey(-50%);
       background-image: url(/assets/images/deco/flower-2.png);
       width: 560px;
       height: 560px;
       background-repeat: no-repeat;
+      @include pad {
+        display: none;
+      }
     }
   }
   &-right{
@@ -25,11 +28,17 @@
       z-index: -1;
       right: 0;
       bottom: 0;
-      transform: translatey(50%);
+      transform: translateY(50%);
       background-image: url(/assets/images/deco/flower-2.png);
       width: 560px;
       height: 560px;
       background-repeat: no-repeat;
+      background-size: cover;
+      @include pad {
+        width: 240px;
+        height: 240px;
+        bottom: 50%;
+      }
     }
   }
   &-title{
@@ -65,6 +74,9 @@
 
 .shadows-card{
   box-shadow: 0px 25px 50px -12px #0000001F;
+  @include mobile-larger {
+    box-shadow: none;
+  }
 }
 .btn{
   &-nav-suject{
@@ -120,5 +132,16 @@
   &::after {
     content: "\e5c8";
     font-family: "Material Symbols Outlined";
+  }
+}
+.h{
+  @media (max-width: 1199.98px) {
+    padding-bottom: 142px;
+  }
+}
+.card-img-top-rounded{
+  border-radius: 20px 20px 0 0;
+  @include mobile-larger {
+    border-radius: 20px;
   }
 }
