--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -636,8 +636,10 @@ $border-color-translucent:    rgba($black, .175) !default;
 // scss-docs-start border-radius-variables
 // $border-radius:               .375rem !default;
 $border-radius:               .75rem !default;
-$border-radius-sm:            .25rem !default;
-$border-radius-lg:            .5rem !default;
+// $border-radius-sm:            .25rem !default;
+$border-radius-sm:            1.25rem !default;
+// $border-radius-lg:            .5rem !default;
+$border-radius-lg:            5rem !default;
 $border-radius-xl:            1rem !default;
 $border-radius-xxl:           2rem !default;
 $border-radius-pill:          50rem !default;
@@ -1450,7 +1452,8 @@ $card-border-width:                 var(--#{$prefix}border-width) !default;
 $card-border-color:                 var(--#{$prefix}border-color-translucent) !default;
 $card-border-radius:                var(--#{$prefix}border-radius) !default;
 $card-box-shadow:                   null !default;
-$card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
+// $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
+$card-inner-border-radius:          $border-radius-sm !default;
 $card-cap-padding-y:                $card-spacer-y * .5 !default;
 $card-cap-padding-x:                $card-spacer-x !default;
 $card-cap-bg:                       rgba(var(--#{$prefix}body-color-rgb), .03) !default;
