--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -94,13 +94,13 @@
                               <p>Kelly Hsu</p>
                             </div>
                             <div class="text-end">
-                              <p class="text-secondary fw-semibold">已購買</p>
+                              <p class="text-primary-100 fw-semibold">NT$ 2,480</p>
                               <p class="fs-9 text-gray-70 text-decoration-line-through">NT$ 3,200</p>
                             </div>
                           </div>
                           <div class="d-flex align-items-center py-1 w-100">
                             <p class="fs-8">已有 420 位同學加入</p>
-                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto fs-7 me-12">
                               star
                             </span>
                             <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
@@ -112,7 +112,7 @@
                   </a></li>
                   <li><a href="#">
                     <div class="border-top pt-3">
-                      <div class="d-flex">
+                      <div class="d-flex pb-5">
                         <div class="position-relative me-1">
                           <img src="/assets/images/course-5.png" class="object-fit-cover rounded w-100" alt="course" style="width: 100px; height: 100px;">
                           <span class="position-absolute top-0 start-0 badge rounded-pill bg-alers-10 text-alers-100 mt-12 ms-12">
@@ -134,7 +134,7 @@
                           </div>
                           <div class="d-flex align-items-center py-1 w-100">
                             <p class="fs-8">已有 420 位同學加入</p>
-                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto">
+                            <span class="material-symbols-outlined text-warning material-symbols-outlined-fill ms-auto fs-7 me-12">
                               star
                             </span>
                             <p class="text-black">4.0<span class="text-gray-70 fs-9">(333)</span></p>
