--- a/assets/scss/pages/_shopping-cart.scss
+++ b/assets/scss/pages/_shopping-cart.scss
@@ -25,3 +25,25 @@
 .list-group-item{
     border: none;
 }
+.bill {
+    .modal-dialog {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      margin: 0;
+      width: 100%;
+      max-width: 100%;
+    }
+    .modal-content {
+      border-radius: 12px 12px 0 0;
+    }
+  
+    .modal.fade .modal-dialog {
+      transition: transform 0.3s ease-out;
+      transform: translate(0, 50px);
+    }
+  
+    .modal.show .modal-dialog{
+      transform: none;
+    }
+  }
